Adição do botão de reiniciar

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <p>Digite um número entre 1 e 100:</p>
         <input type="number" id="palpite" min="1" max="100" />
         <button onclick="verificarPalpite()">Chutar</button>
+        <button onclick="reiniciarJogo()">Reiniciar</button>
         <p id="mensagem"></p>
-        <p id="tentativas"></p>        
+        <p id="tentativas"></p>
+        <p id="reinicio"></p>   
     </div>
 </body>
 </html>
